--- a/views/inbox.ejs
+++ b/views/inbox.ejs
@@ -8,42 +8,7 @@
         <title>Aether - Inbox</title>
     </head>
     <body>
-        <%- include('partials/header', {'userEmail': userEmail}) %>
-        <div class="info-container">
-        <%- include('partials/sidepanel', {'userEmail': userEmail}) %>
-        <% const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"] %>
-        <div class="email-container">
-        <form action="/delete" method="post">
-        <button type="submit">Delete</button>
-        </form>
-        <% for (var i = 0; i < messages.length ; i++) { %>
-          <div class="email-object">
-          <input type="checkbox" id="email-checkbox" value="<%=messages[i]['messageID']%>" name="emailCheckbox">
-          <a class="email-info <%=String(messages[i]['isRead']) == '0' ? 'notread' : 'read' %>" href="/inbox/<%-currentPage%>/<%-messages[i]['messageID']%>">
-            <div class="email-left" >
-              <div><p><%= messages[i]["messageAuthorFullName"] %></p></div>
-              <div><p><%= messages[i]["messageSubject"] %></p></div>
-            </div>
-            <div class="email-right">
-              <div><p> <%= messages[i]["messageDate"].getDate() + " " + months[messages[i]["messageDate"].getMonth()] + ", " + messages[i]["messageDate"].getFullYear() %></p></div>
-            </div>
-          </a>
-          </div>
-            <% } %>
-          </div>
-        </div>
-          <ul class="pagination">
-            <li class="page-item <%= currentPage === 1 ? 'disabled' : 'enabled' %>">
-            <a href="/inbox/<%-currentPage - 1%>" class="page-link">Previous</a>
-            </li>
-            <% for (let i = 1; i <= totalPages; i++) { %>
-              <li class="page-item <%= currentPage === i ? 'active' : 'inactive' %>">
-                <a href="/inbox/<%- i %>" class="page-link"><%= i %></a>
-                </li>
-                <% } %>
-                <li class="page-item <%= currentPage === totalPages ? 'disabled' : 'enabled' %>">
-                <a href="/inbox/<%-currentPage + 1 %>" class="page-link">Next</a>
-                </li>
-                </ul>
+        <%- include('partials/home', {'userEmail': userEmail, 'messages': messages, 'name': 'inbox'}) %>
+        <%- include('./partials/pagination', {'currentPage': currentPage, 'totalPages': totalPages, 'name': 'inbox'}) %>
     </body>
 </html>
