--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sign in</title>
-        <link href="/assets/auth.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <div class="auth-header">
-        <img src="assets/aether.png" alt="mail man">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign in</title>
+    <link href="/assets/auth.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <div class="auth-header">
+        <img src="assets/aether.png" alt="mail man">
+    </div>
+    <div class="auth-container">
+        <div class="auth-title">
+            <h1>Login</h1>
+            <h4>Enter your Aether Account details</h4>
         </div>
-        <div class="auth-container">
-          <div class="auth-title">
-          <h1>Login</h1>
-          <h4>Enter your Aether Account details</h4>
-          </div>
-            <form action="/login" method="post">
-                <div class="prompt-container">
-                    <div>
-                        <label for="uname"><b>Email</b></label>
-                    </div>
-                    <div>
-                        <input type="text" placeholder="Enter Email" name="email"  value="<%= typeof userEmail !== 'undefined' ? userEmail : '' %>"> </div>
-                        <div class="err"><%= typeof emailError !== 'undefined' ? emailError : '' %></div>
+        <form action="/login" method="post">
+            <div class="prompt-container">
+                <div>
+                    <label for="uname"><b>Email</b></label>
                 </div>
-                <div class="prompt-container">
-                    <label for="passwd"><b>Password</b></label>
+                <div>
+                    <input type="text" placeholder="Enter Email" name="email"
+                        value="<%= typeof userEmail !== 'undefined' ? userEmail : '' %>">
+                </div>
+                <div class="err">
+                    <%= typeof emailError !=='undefined' ? emailError : '' %>
+                </div>
+            </div>
+            <div class="prompt-container">
+                <label for="passwd"><b>Password</b></label>
                 <div>
                     <input type="password" placeholder="Enter Password" name="passwd">
                     <div>
-                        <div class="err"><%= typeof passwordError !== 'undefined' ? passwordError : '' %></div>
+                        <div class="err">
+                            <%= typeof passwordError !=='undefined' ? passwordError : '' %>
+                        </div>
                     </div>
                 </div>
-                </div>
-                <div class="prompt-container" id="login-button">
-                <button type="submit">Login</button>
-                </div>
-            </form> 
-            <div class="login-or-regis">
-            <p> New to Aether? <a href='/register'>Create account</a></p>
             </div>
+            <div class="prompt-container" id="login-button">
+                <button type="submit">Login</button>
+            </div>
+        </form>
+        <div class="login-or-regis">
+            <p> New to Aether? <a href='/register'>Create account</a></p>
         </div>
-        <body>
+    </div>
+
+    <body>
+
 </html>
