--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
         <form action="/login" method="post">
             <div class="prompt-container">
                 <div>
-                    <label for="uname"><b>Email</b></label>
+                    <label for="email"><b>Email</b></label>
                 </div>
                 <div>
                     <input type="text" placeholder="Enter Email" name="email"
