--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,7 +46,7 @@
             </div>
         </form>
         <div class="login-or-regis">
-            <p> New to Aether? <a href='/register'>Create account</a></p>
+            <p> New to <span id="aether">Aether</span>? <a class="alternate-auth" href='/register'>Create account</a></p>
         </div>
     </div>
 
