--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
     </div>
     <div class="control-panel-button">
     <form action="/" method="post">
-      <button type="submit">Logout</button>
+      <button id="logout-botton" type="submit">Logout</button>
     </form>
     </div>
   </div>
