--- a/views/register.ejs
+++ b/views/register.ejs
@@ -55,7 +55,9 @@
                 <button type="submit">Register</button>
             </div>
         </form>
-        <p>Already have an account? <a href='/login'>Sign in</a></p>
+        <div class="login-or-regis">
+          <p>Already have an account? <a class="alternate-auth" href='/login'>Sign in</a></p>
+        </div>
     </div>
 </body>
 
