--- a/public/assets/const.css
+++ b/public/assets/const.css
@@ -33,3 +33,10 @@ a:hover {
 body {
   background: var(--def-bg);
 }
+
+button {
+  margin-bottom: 0.4rem;
+  border: 3px solid red;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
