--- a/public/assets/detail.css
+++ b/public/assets/detail.css
@@ -17,13 +17,13 @@
 
 .email-detail {
   border: 3px solid salmon;
-  border-radius: 3px;
+  border-radius: 5px;
   padding: 0.5rem;
 }
 
 .author {
-  border: 3px solid lightcoral;
-  border-radius: 3px;
+  border: 3px solid salmon;
+  border-radius: 5px;
   padding: 0.5rem;
   margin-bottom: 0.3rem;
 }
