--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -35,7 +35,7 @@
                 <div class="prompt-container">
                   <label for="uname"><b>Subject:</b></label>
                   <div>
-                    <input type="text" placeholder="Subject" name="messageSubject"
+                    <input type="text" placeholder="<no subject>" name="messageSubject"
                       value="<%= typeof messageSubject !== 'undefined' ? messageSubject : '' %>">
                   </div>
                 </div>
